@@ -14,6 +14,7 @@
 * Add - Error messages when dispute evidence exceeds Stripe limits.
 * Add - Export Disputes to CSV
 * Update - Remove "Boost your sales by accepting new payment methods" from the overview tasks list.
+* Fix - Onboarding must be completed before Subscriptions products can be published.
 
 = 3.3.0 - 2021-11-18 =
 * Add - Add Idempotency Key to POST headers.
